--- a/src/styles.css
+++ b/src/styles.css
@@ -1,44 +1,61 @@
 body {
     background-color: hsl(212, 45%, 89%);
-    display: flex;
-    flex-direction: column; /* Organiza el contenido en columnas */
-    justify-content: center; /* Centra el contenido verticalmente */
-    align-items: center; /* Centra el contenido horizontalmente */
     min-height: 100vh; /* Altura total de la pantalla */
     margin: 0;
     font-family: 'Outfit', sans-serif;
+    text-align: center;
+
+    display: flex; /* Convertir el body en contenedor flex */
+    justify-content: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente */
+
+    flex-direction: column;
+
+    position: relative;
 }
 
 .container {
-    flex: 1; /* Permite que el contenedor ocupe el espacio disponible */
+
     display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
-    position: relative;
+
+    flex-direction: column;
+
+    justify-content:space-around;
+
+    align-items: center;
+
+    box-sizing: border-box;
+
+    flex-wrap: wrap;
+
+    background-color: white;
+
+    width: 280px;
+
+    padding: 15px ;
+   
+    border-radius: 20px ;
+
 }
 
 img {
     
-    width: 300px;
-    border-radius: 20px;
+    width: 250px;
+    border-radius: 10px ;
 }
 
-section {
-    padding: 20px;
-    text-align: center;
-    border-radius: 20px;
-    
-    background-color: white;
-    width: 320px;
-    height: 450px;
+section > *{
+    width: 240px;
 }
 
-footer {
-    background-color: hsl(212, 45%, 89%);
-    color: black;
-    padding: 10px;
-    width: 100%; /* Ocupa todo el ancho de la pantalla */
-    text-align: center;
-    position: absolute; /* Fija el footer en la parte inferior */
-    bottom: 0;
+footer{
+    position:absolute;
+    bottom: 10px;
 }
+
+p {
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.68);
+}
+
+
